# domhmm

./: .codecov.yml  .gitattributes  .gitignore  .pylintrc  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  readthedocs.yaml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: gh-ci.yaml
devtools/conda-envs/: test_env.yaml
docs/: Makefile  README.md  make.bat  requirements.yaml
docs/source/: api.rst  conf.py  getting_started.rst  how-to-run.rst  how-to-use.rst  index.rst  installation.rst  post-analysis.rst  tips.rst  what-is-domhmm.rst
domhmm/: __init__.py  _version.py
domhmm/analysis/: __init__.py  base.py  cluster.py  director_order.py  domhmm.py  hmm.py  mean_order.py  order_analysis_edit_faster.py
domhmm/data/: DOPC_CG_TPR.tpr  DOPC_CG_XTC.xtc  files.py
domhmm/tests/: conftest.py  test_base.py  test_domhmm.py
domhmm/tests/analysis/: test_domhmm.py
domhmm/tests/data/: first_lower_apl.pickle  first_lower_pbc_idx.pickle  first_lower_vor.pickle  first_lower_weight.pickle  first_order_parameters.pickle  first_upper_apl.pickle  first_upper_pbc_idx.pickle  first_upper_vor.pickle  first_upper_weight.pickle  symmetric_hmm.pickle
examples/atomistic-example/: main.py
examples/martini-example/: main.py  mem.tpr
examples/tmd-protein-example/: main.py  md_center_mol.xtc  mem.tpr
