[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "domhmm"
description = "HMM model to determine Lo or Ld domains from coarse grained or atomistic MD simulations."
license = {file = "LICENSE" }
authors = [
    {name = "Marius FW Trollmann", email = "marius.trollmann@fau.de"},
]
maintainers = [
    {name = "Marius FW Trollmann", email = "marius.trollmann@fau.de"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "MDAnalysis>=2.0.0",
]
keywords = [
    "molecular simulations",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-xdist>=2.5",
    "pytest-cov>=3.0",
]
doc = [
    "sphinx",
    "sphinx_rtd_theme",
]

# [project.urls]
# source = "https://github.com/m-a-r-i-u-s/domhmm"
# documentation = "https://domhmm.readthedocs.io"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "domhmm/tests",
]
